# __2025_08_31_chihlee_raspberry__

./: .env  .gitignore  GEMINI.md  README.md  docker-compose.yml  gemini啟動說明.md  main.py  pyproject.toml  scores.json  test1.py
.gemini/: settings.json
crud/: lesson1.ipynb
link/: README.md
mongo專案/: GEMINI.md  README.md  app.py  requirements.txt  streamlit_app.py
mongo專案1/: GEMINI.md  README.md  main.py
mongo專案1/static/: script.js  style.css
mongo專案1/templates/: index.html
mongo專案2/: .env  GEMINI.md  README.md  main.py
mongo專案2/static/: script.js  settings.js  style.css
mongo專案2/templates/: home.html  index.html  settings.html
mongo專案3/: GEMINI.md  TODO.md  main.py
mongo專案3/static/: script.js  style.css
mongo專案3/templates/: index.html
specs/001-ai-pygame/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/001-ai-pygame/checklists/: requirements.md
specs/001-ai-pygame/contracts/: game_logic.md
static/: script.js  style.css
templates/: index.html
俄羅斯方塊/: GEMINI.md  README.md  todo.md
俄羅斯方塊/src/: block.py  game.py  main.py  settings.py
貪食蛇1/: GEMINI.md  main.py
貪食蛇2/: .gitignore  GEMINI.md  README.md  scores.json
貪食蛇2/.specify/memory/: constitution.md
貪食蛇2/.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
貪食蛇2/specs/001-/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
貪食蛇2/src/: config.py  food.py  game.py  game_state.py  main.py  player.py  scores.py  settings.py  snake.py  ui.py
貪食蛇2/tests/: test_food.py  test_game.py  test_integration.py  test_scores.py  test_snake.py
(+4 files in other folders)
